# herald

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  herald_conf.toml
chainmail/: Cargo.toml
chainmail/src/: errors.rs  lib.rs  newtype_macros.rs
chainmail/src/block/: mod.rs  test.rs
channel_ratchet/: Cargo.toml
channel_ratchet/src/: lib.rs
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  traits.rs  types.rs
doubleclank/: Cargo.toml
doubleclank/src/: kdf_chain.rs  kx.rs  lib.rs  sig.rs  sym.rs  utils.rs
herald_common/: Cargo.toml
herald_common/src/: crypto.rs  framed.rs  lib.rs  newtype_macros.rs  rusqlite_impls.rs  time.rs  types.rs
herald_common/src/protocol/: auth.rs  mod.rs  pushes.rs  requests.rs
herald_common/src/types/: mod.rs  packets.rs  pushes.rs  requests.rs
herald_rpclient/: Cargo.toml
herald_rpclient/src/: lib.rs
herald_server/: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml  mac-docker-compose.yml  pg_clean.sh
herald_server/load/: run.sh  script.lua
herald_server/migrations/2019-09-21-221007_herald/: up.sql
herald_server/server_errors/: Cargo.toml
herald_server/server_errors/src/: lib.rs
herald_server/server_protocol/: Cargo.toml
herald_server/server_protocol/src/: get.rs  handlers.rs  lib.rs  login.rs  post.rs
herald_server/server_protocol/tests/: e2e.rs
herald_server/server_store/: Cargo.toml
herald_server/server_store/schema/: down.sql  up.sql
herald_server/server_store/src/: add_to_pending.rs  group_change.rs  lib.rs  macros.rs  pending.rs  pool.rs  prekeys.rs  recip_exists.rs  sigchain.rs  tests.rs  trait_def.rs
herald_server/src/: errors.rs  http.rs  lib.rs  macros.rs  main.rs  schema.rs  store.rs
herald_server/src/protocol/: framed.rs  get.rs  http.rs  login.rs  mod.rs  post.rs  rpc_impl.rs
herald_server/src/store/: mod.rs  pool.rs  tests.rs
heraldcore/: .gitignore  Cargo.toml  README.md
heraldcore/chainkeys/: Cargo.toml
heraldcore/chainkeys/src/: db.rs  lib.rs  tests.rs
heraldcore/coreconf/: Cargo.toml
heraldcore/coreconf/src/: lib.rs
heraldcore/coremacros/: Cargo.toml
heraldcore/coremacros/src/: lib.rs
heraldcore/coretypes/: Cargo.toml
heraldcore/coretypes/src/: config.rs  dmessages.rs  ids.rs  lib.rs  messages.rs  user.rs
heraldcore/crypto_helpers/: Cargo.toml
heraldcore/crypto_helpers/src/: lib.rs
heraldcore/crypto_store/: Cargo.toml
heraldcore/crypto_store/schema/: down.sql  up.sql
heraldcore/crypto_store/src/: connection.rs  conversation.rs  errors.rs  keystore.rs  lib.rs  pending.rs  ratchet.rs  sigstore.rs
heraldcore/herald_attachments/: Cargo.toml
heraldcore/herald_attachments/src/: convert.rs  errors.rs  lib.rs
heraldcore/herald_ids/: Cargo.toml
heraldcore/herald_ids/src/: lib.rs
heraldcore/herald_network/: Cargo.toml
heraldcore/herald_network/src/: client.rs  lib.rs  registration.rs  requests.rs  setup.rs
heraldcore/herald_user/: Cargo.toml
heraldcore/herald_user/src/: convert.rs  error.rs  lib.rs
heraldcore/image_utils/: Cargo.toml
heraldcore/image_utils/src/: lib.rs
heraldcore/location/: Cargo.toml
heraldcore/location/src/: lib.rs
heraldcore/network_types/: Cargo.toml
heraldcore/network_types/src/: action.rs  amessages.rs  cmessages.rs  dmessages.rs  lib.rs  rusqlite_imp.rs  umessages.rs
heraldcore/platform_dirs/: Cargo.toml
heraldcore/platform_dirs/src/: android.rs  desktop.rs  lib.rs
heraldcore/search_pattern/: Cargo.toml
heraldcore/search_pattern/src/: lib.rs
heraldcore/src/: db.rs  errors.rs  image_utils.rs  lib.rs  network.rs  updates.rs  utils.rs
heraldcore/src/chainkeys/: mod.rs  tests.rs
heraldcore/src/config/: db.rs  mod.rs  tests.rs
heraldcore/src/contact/: db.rs  mod.rs  tests.rs
heraldcore/src/contact_keys/: db.rs  mod.rs  tests.rs
heraldcore/src/conversation/: db.rs  mod.rs  settings.rs  tests.rs  types.rs
heraldcore/src/db/: mod.rs  pool.rs
heraldcore/src/members/: db.rs  mod.rs  tests.rs
heraldcore/src/message/: builder.rs  db.rs  mod.rs  tests.rs
heraldcore/src/message_receipts/: mod.rs  tests.rs
heraldcore/src/network/: event.rs  handlers.rs  helper.rs  login.rs  login_imp.rs  message_handlers.rs  message_senders.rs  (+5 more)
kcl/: Cargo.toml
kcl/src/: aead.rs  box_.rs  ed25519.rs  hash.rs  kx.rs  lib.rs  newtype_macros.rs  random.rs  sign.rs  x25519.rs
krpc/: Cargo.toml
krpc/src/: asynchronous.rs  lib.rs  quic.rs
krpc/tests/: chat.rs  pubsub.rs
kson/: Cargo.toml
kson/kson_derive/: Cargo.toml
kson/kson_strategy/: Cargo.toml
kson/src/: de.rs  errors.rs  lib.rs  ser.rs  strategy.rs  utils.rs  value.rs
kson/tests/: derive_enum.rs  derive_struct.rs  value.proptest-regressions  value.rs
kson_channel/: Cargo.toml
kson_channel/src/: asynchronous.rs  error.rs  lib.rs  packets.rs  sync.rs
kson_channel/tests/: tcp.rs  tcp_sync.rs
libherald/: .gitignore  Cargo.toml  Makefile.toml  README.md  bindings.json  build.rs  cbindgen.toml  extern_error.h  herald.h  store.sqlite3-shm  store.sqlite3-wal
libherald/emoji_scraper/: .gitignore  Cargo.toml  README.md  README.txt  emoji_scraper.py
libherald/heraldcore/: .gitignore  Cargo.toml  store.sqlite3-shm  store.sqlite3-wal
libherald/message_cache/: Cargo.toml
libherald/messages_helper/: .gitignore  Cargo.toml
libherald/qt_bindgen/: Cargo.toml
libherald/qt_ffi/: Bindings.cpp  Bindings.h  androidhelpers.h  qmlconstants.cpp  qmlconstants.h
libherald/src/: conversation_builder.rs  db.rs  errors.rs  ffi.rs  imp.rs  implementation.rs  interface.rs  lib.rs  models.rs  notifications.rs  reply_width.rs  runtime.rs  schema.rs  shared.rs  shared_conversations.rs  types.rs  users_search.rs  utils.rs
libherald/tests/: integration_test.rs
ratchet_chat/: Cargo.toml
ratchet_chat/src/: lib.rs  protocol.rs
server/: .gitignore  Cargo.toml  README.md  docker-compose.yml
server/src/: db.rs  errors.rs  lib.rs  macros.rs  main.rs  protocol.rs  schema.rs  store.rs  user.rs  utils.rs
stupid_crypto/: Cargo.toml
stupid_crypto/benches/: kem.rs  sig.rs
stupid_crypto/src/: kem.rs  lib.rs  sig.rs  util.rs
(+1420 files in other folders)
