[workspace]

members = [
  "channel_ratchet",
  "herald_common",
  "herald_server",
  "herald_server/server_errors",
  "herald_server/server_protocol",
  "herald_server/server_store",
  "heraldcore",
  "heraldcore/chainkeys",
  "heraldcore/coremacros",
  "heraldcore/coretypes",
  "heraldcore/herald_ids",
  "heraldcore/image_utils",
  "heraldcore/network_types",
  "heraldcore/platform_dirs",
  "kcl",
  "kson",
  "kson/kson_derive",
  "libherald",
  "libherald/message_cache",
  "libherald/messages_helper",
  "libherald/qt_bindgen",
  "location",
  "revec",
  "search_pattern"
]

[profile.release]
lto = true
