[package]
name = "channel_ratchet"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"

[dependencies.kcl]
path = "../kcl"

[dependencies.kson]
path = "../kson"
