[package]
name = "herald_common"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio       = "0.2.0-alpha.4"
rusqlite    = "0.20.0"
serde_cbor  = "0.10"
sodiumoxide = "0.2"
bytes       = { version = "0.4", features = ["serde"] }
serde       = { version = "1.0", features = ["derive"] }
chrono      = { version = "0.4", features = ["serde"] }
arrayvec    = { version = "0.4", features = ["serde-1"] }
chainmail   = { git = "https://github.com/kalix-systems/chainmail.git" }


