[package]
name = "herald_common"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-trait = "0.1"
chainmail   = { git = "https://github.com/kalix-systems/chainmail.git" }
serde_cbor  = "0.10"
serde_bytes = "0.11"
sodiumoxide = "0.2"

[dependencies.arrayvec]
version = "0.4"
features = ["serde-1"]

[dependencies.bytes]
version = "0.4"
features = ["serde"]


[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4.2"
features = ["postgres"]
optional = true

[dependencies.rusqlite]
version = "0.20.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
diesel_pg = ["diesel/postgres"]
rusqlite_ = ["rusqlite"]
