[package]
name = "doubleclank"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2"
libsodium-sys = "0.2"
bytes = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"], optional = true}

[features]
default = []
serde-support = ["serde"]
