[package]
name = "herald_common"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dependencies.rusqlite]
# version = "0.21"
git = "https://github.com/jgallagher/rusqlite.git"
optional = true
default_features = false
features = ["functions"]

[dependencies.kson]
path = "../kson"

[dependencies.kcl]
path = "../kcl"

