[package]
name = "herald_common"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"

[target."cfg(target_os=\"windows\")".dependencies.rusqlite]
version = "0.21"
optional = true
default_features = false
features = ["functions", "bundled"]

[target."cfg(not(target_os=\"windows\"))".dependencies.rusqlite]
version = "0.21"
optional = true
default_features = false
features = ["functions", "bundled", "buildtime_bindgen"]

[dependencies.kson]
path = "../kson"

[dependencies.kcl]
path = "../kcl"
