[package]
name = "herald_client"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.16.0"
webpki = "0.21.0"
tokio-rustls = "0.12.1"
anyhow = "1.0.26"
rustls-native-certs = "0.1.0"
once_cell = "1.2.0"

[dependencies.herald_common]
path = "../herald_common"

[dependencies.krpc]
path = "../krpc"
features = ["ws"]

[dependencies.location]
path = "../location"

[dependencies.tokio]
version = "0.2.6"
features = ["rt-core", "sync", "time", "stream"]
