[package]
name        = "herald_server"
version     = "0.1.0"
authors     = ["theseriousadult <jack@gallabytes.com>", "Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition     = "2018"
default-run = "herald_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = "1.0.26"
once_cell    = "1.3.0"
rcgen        = "0.7.0"
rustls       = "0.16.0"
rustop       = "1.0.4"
tokio-rustls = "0.12.2"
futures = "0.3.1"

[dependencies.tokio]
version  = "0.2.6"
features = ["macros", "rt-threaded"]

[dependencies.herald_common]
path = "../herald_common"

[dependencies.server_errors]
path = "server_errors"

[dependencies.server_store]
path = "server_store"

[dependencies.server_protocol]
path = "server_protocol"

[dependencies.krpc]
path = "../krpc"
features = ["async", "ws"]
