[package]
name    = "heraldcore"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>", "mobile-bungalow <pwmay@ucsc.edu>", "theseriousadult <jack@kalix.io>", "Kaavya Jayram <kaavya.nj@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel    = "0.3.9"
hex                  = "0.4.0"
once_cell            = "1.2.0"
parking_lot          = "0.9.0"
tar                  = "0.4.26"
unicode-segmentation = "1.6.0"

[dependencies.herald_common]
path             = "../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.kcl]
path = "../kcl"

[dependencies.channel_ratchet]
path = "../channel_ratchet"

[dependencies.coretypes]
path = "./coretypes"

[dependencies.coremacros]
path = "./coremacros"

[dependencies.network_types]
path = "./network_types"

[dependencies.location]
path = "./location"

[dependencies.search_pattern]
path = "./search_pattern"

[dependencies.platform_dirs]
path = "./platform_dirs"

[dependencies.image_utils]
path = "./image_utils"

[dependencies.chainkeys]
path = "./chainkeys"

[dependencies.websocket]
version          = "0.23"
default_features = false
features         = ["sync"]

[dependencies.ureq]
version          = "0.11"
default_features = false

[dependencies.rusqlite]
version          = "0.20.0"
default_features = false
features         = ["bundled"]

[features]
deploy = ["platform_dirs/deploy"]

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
