[package]
name    = "heraldcore"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>", "mobile-bungalow <pwmay@ucsc.edu>", "theseriousadult <jack@kalix.io>", "Kaavya Jayram <kaavya.nj@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam-channel    = "0.4"
hex                  = "0.4"
once_cell            = "1.2"
parking_lot          = "0.10"
tar                  = "0.4"
unicode-segmentation = "1.6"
tilde = "0.0.4"
thiserror = "1.0.10"

[dependencies.herald_common]
path             = "../herald_common"
default_features = false
features         = ["rusqlite"]

[dependencies.kcl]
path = "../kcl"

[dependencies.coremacros]
path = "./coremacros"

[dependencies.coretypes]
path = "./coretypes"

[dependencies.crypto_store]
path = "./crypto_store"

[dependencies.herald_attachments]
path = "./herald_attachments"

[dependencies.herald_ids]
path = "./herald_ids"

[dependencies.herald_user]
path = "./herald_user"

[dependencies.image_utils]
path = "./image_utils"

[dependencies.location]
path = "../location"

[dependencies.network_types]
path = "./network_types"

[dependencies.platform_dirs]
path = "./platform_dirs"

[dependencies.ratchet_chat]
path = "../ratchet_chat"

[dependencies.search_pattern]
path = "../search_pattern"

[dependencies.websocket]
version          = "0.23"
default_features = false
features         = ["sync"]

[dependencies.ureq]
version          = "0.11"
default_features = false

[features]
deploy = ["platform_dirs/deploy"]

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
