[package]
name = "krpc"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3.1"
thiserror = "1.0"
quinn = "0.5"
quinn-proto = "0.5"

[dependencies.tokio]
version = "0.2.4"
features = ["rt-core"]

[dependencies.kson]
path = "../kson"

[dependencies.location]
path = "../location"

[dev-dependencies]
portpicker = "0.1"
rcgen = "0.7"
rustls = "0.16"
rustls-native-certs = "0.1"
tokio-macros = "0.2"
void = "1.0"

[dev-dependencies.tokio]
version = "0.2.4"
features = ["macros", "rt-threaded",  "sync", "time", "stream"]

[dev-dependencies.kcl]
path = "../kcl"
