[package]
name = "krpc"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "0.5"
byteorder = "1.3"
futures = "0.3.1"
sharded-slab = "0.0.7"

[dependencies.tokio]
version = "0.2.4"
features = ["rt-core"]

[dependencies.kson]
path = "../kson"

[dependencies.kson_channel]
path = "../kson_channel"

[dependencies.location]
path = "../location"

[dependencies.quinn]
version = "0.5"
optional = true

[dependencies.quinn-proto]
version = "0.5"
optional = true

[dependencies.tungstenite]
version = "0.9"
optional = true
default-features = false

[dependencies.tokio-tungstenite]
git = "https://github.com/dbcfd/tokio-tungstenite/"
rev = "6dc2018cbfe8fe7ddd75ff977343086503135b38"
optional = true

[dependencies.rustls]
version = "0.16"
optional = true

[dependencies.tokio-rustls]
version = "0.12"
optional = true

[dependencies.webpki]
version = "0.21"
optional = true

[features]
default = ["quic", "ws"]
quic = ["quinn","quinn-proto", "tokio/rt-threaded"]
ws-sync = ["tungstenite", "rustls", "webpki"]
ws = ["ws-sync", "tokio-tungstenite", "tokio-rustls", "tokio/io-util", "tokio/sync"]

[dev-dependencies]
portpicker = "0.1"
rcgen = "0.7"
rustls = "0.16"
rustls-native-certs = "0.1"
tokio-macros = "0.2"

[dev-dependencies.tokio]
version = "0.2.4"
features = ["macros", "rt-threaded",  "sync", "time", "stream"]

[dev-dependencies.kcl]
path = "../kcl"
