[package]
name = "kson"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>", "Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec  = "0.5.1"
backtrace = "0.3.40"
bytes     = "0.5"

[dependencies.kson_derive]
path = "./kson_derive"

[dependencies.location]
path = "../location"

[dev-dependencies]
proptest = "0.9.4"

[dev-dependencies.kson_strategy]
path = "./kson_strategy"
