[package]
name = "kson_channel"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

[dependencies]
# crc32fast = "1.2.0"
# futures = "0.3"
thiserror = "1.0"

[dependencies.tokio]
version = "0.2"
features = ["io-util", "time"]

[dependencies.kson]
path = "../kson"

[dev-dependencies]
port_check = "0.1.2"
