[package]
name = "kson_channel"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

[dependencies]
thiserror = "1.0"

[dependencies.tokio]
version = "0.2"
features = ["io-util", "time"]
optional = true

[dependencies.kson]
path = "../kson"

[dev-dependencies]
port_check = "0.1.2"

[features]
async = ["tokio"]
