[package]
name = "ratchet_chat"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.kcl]
path = "../kcl"

[dependencies.kson]
path = "../kson"
