[package]
name = "herald_server"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes       = { version = "0.4", features = ["serde"] }
chrono      = { version = "0.4", features = ["serde"] }
ctrlc       = "3.1"
dashmap     = "1.0"
failure     = "0.1"
lazy_static = "1.4"
diesel      = { version = "1.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv      = "0.9.0"
redis       = "0.12"
serde       = { version = "1.0", features = ["derive"] }
serde_cbor  = "0.10"
sodiumoxide = "0.2"
tokio       = "0.2.0-alpha.5"
tokio-io    = "0.2.0-alpha.5"
untrusted   = "0.7"

qutex         = { git  = "https://github.com/cogciprocate/qutex.git"}
futures       = "0.1"

womp          = { git  = "https://github.com/kalix-systems/womp"}
herald_common = { path = "../common", features = ["diesel_pg"] }


[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
