[package]
name = "herald_server"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc           = "3.1"
dashmap         = "1.0"
lazy_static     = "1.4"
dotenv          = "0.9.0"
serde_cbor      = "0.10"
sodiumoxide     = "0.2"
tokio           = "0.2.0-alpha.4"

bytes           = { version = "0.4",            features = ["serde"] }
chrono          = { version = "0.4",            features = ["serde"] }
# futures-preview = { version = "0.3.0-alpha.18", features = ["compat"] }
diesel          = { version = "1.0.0",          features = ["postgres", "chrono", "r2d2"] }
serde           = { version = "1.0",            features = ["derive"] }
warp            = { git = "https://github.com/jxs/warp.git" }

womp          = { git  = "https://github.com/kalix-systems/womp"}
herald_common = { path = "../common" }


[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
