[package]
name = "stupid_crypto"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-falcon = "0.1"
pqcrypto-ntru = "0.4"
pqcrypto-traits = "0.3"
serde = {version = "1.0", features = ["derive"]}
arrayvec = {version = "0.4", features = ["serde-1"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sig"
harness = false

[[bench]]
name = "kem"
harness = false
