[package]
name = "server_errors"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres  = "0.5.0-alpha.2"
tokio           = "0.2"

[dependencies.herald_common]
path = "../../herald_common"

