[package]
name = "server_errors"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror       = "1.0"
tokio-postgres  = "0.5.0-alpha.2"
warp = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["time"]

[dependencies.kson]
path = "../../kson"

[dependencies.herald_common]
path = "../../herald_common"
