[package]
name = "server_protocol"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dashmap         = "1.0"
futures = "0.3"
lazy_static     = "1.4"
tokio-postgres  = "0.5.0-alpha.2"
crossbeam-channel = "0.3.9"
stream-cancel = "0.5.0-alpha.5"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-threaded",  "sync", "time", "stream"]

[dependencies.herald_common]
path = "../../herald_common"

[dependencies.krpc]
path = "../../krpc"

[dependencies.server_errors]
path = "../server_errors"

[dependencies.server_store]
path = "../server_store"

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
womp = { git  = "https://github.com/kalix-systems/womp"}
