[package]
name = "server_protocol"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
dashmap         = "1.0"
futures = "0.3"
lazy_static     = "1.4"
tokio-postgres  = "0.5.0-alpha.2"
crossbeam-channel = "0.3.9"
scopeguard = "1.0"
stream-cancel = "0.5.0-alpha.5"

[dependencies.tokio]
version = "0.2.6"
features = ["macros", "rt-core",  "sync", "time", "stream"]

[dependencies.herald_common]
path = "../../herald_common"

[dependencies.krpc]
path = "../../krpc"
features = ["async"]

[dependencies.server_errors]
path = "../server_errors"

[dependencies.server_store]
path = "../server_store"

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
womp = { git  = "https://github.com/kalix-systems/womp"}
portpicker = "0.1"
rcgen = "0.7"
rustls = "0.16"
rustls-native-certs = "0.1"
tokio-rustls = "0.12"
webpki = "0.21"

[dev-dependencies.krpc]
path = "../../krpc"
features = ["ws"]
