[package]
name = "server_store"
version = "0.1.0"
authors = ["Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait       = "0.1.19"
bytes             = "0.4.12"
crossbeam-channel = "0.3.9"
futures-preview   = "0.3.0-alpha.19"
lazy_static       = "1.4.0"
tokio             = "0.2.0-alpha.6"
tokio-postgres    = "0.5.0-alpha.1"

[dependencies.server_errors]
path = "../server_errors"

[dependencies.herald_common]
path = "../../herald_common"

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"

[dev-dependencies.womp]
git  = "https://github.com/kalix-systems/womp"
