[package]
name = "chainkeys"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>", "Baeo Maltinksy <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
byteorder   = "1.3.2"
parking_lot = "0.9.0"
once_cell = "1.2.0"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.channel_ratchet]
path = "../../channel_ratchet"

[dependencies.coretypes]
path = "../coretypes"

[dependencies.location]
path = "../location"

[dependencies.coremacros]
path = "../coremacros"

[dependencies.kcl]
path = "../../kcl"

[dependencies.platform_dirs]
path             = "../platform_dirs"


[dependencies.rusqlite]
version          = "0.20.0"
default_features = false
features         = ["functions", "bundled"]

[dev-dependencies]
serial_test        = "0.2.0"
serial_test_derive = "0.2.0"
