[package]
name = "coretypes"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
hex = "0.4.0"
tar = "0.4.26"
json = "0.12.0"
unicode-segmentation = "1.6.0"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.platform_dirs]
path = "../platform_dirs"

[dependencies.image_utils]
path = "../image_utils"

[dependencies.search_pattern]
path = "../search_pattern"

[dependencies.location]
path = "../../location"

[dependencies.kson]
path = "../../kson"

[dependencies.kcl]
path = "../../kcl"

[dependencies.rusqlite]
version          = "0.21"
default_features = false
features         = ["functions", "bundled"]
