[package]
name = "coretypes"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
json = "0.12"
unicode-segmentation = "1.6.0"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.herald_ids]
path = "../herald_ids"

[dependencies.herald_attachments]
path = "../herald_attachments"

[dependencies.search_pattern]
path = "../../search_pattern"

[dependencies.location]
path = "../../location"

[dependencies.kson]
path = "../../kson"

[dependencies.kcl]
path = "../../kcl"

[dependencies.coremacros]
path = "../coremacros"

[dependencies.rusqlite]
version          = "0.21"
default_features = false
