[package]
name = "crypto_store"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.3.0"
parking_lot = "0.9"
thiserror = "1.0.9"

[dependencies.ratchet_chat]
path = "../../ratchet_chat"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite_"]

[dependencies.kcl]
path = "../../kcl"

[dependencies.rusqlite]
version          = "0.21"
default_features = false
features         = ["bundled"]

[dependencies.coremacros]
path = "../coremacros"

[dependencies.herald_ids]
path = "../herald_ids"

[dependencies.platform_dirs]
path = "../platform_dirs"
