[package]
name = "herald_attachments"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
hex = "0.4"
tar = "0.4.26"
json = "0.12.0"

[dependencies.kcl]
path = "../../kcl"

[dependencies.image_utils]
path = "../image_utils"

[dependencies.location]
path = "../../location"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false

[dependencies.kson]
path = "../../kson"

[dependencies.platform_dirs]
path = "../platform_dirs"
