[package]
name = "herald_ids"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
features         = ["rusqlite"]

# [dependencies.rusqlite]
# version          = "0.21"
# default_features = false
# features         = ["functions"]

[dependencies.kson]
path = "../../kson"
