[package]
name = "herald_network"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.2.0"
parking_lot = "0.10.0"
anyhow = "1.0.26"

[dependencies.herald_client]
path = "../../herald_rpclient"

[dependencies.tokio]
version = "0.2.6"
default_features = false
features = ["rt-core", "sync"]

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false
