[package]
name = "herald_user"
version = "0.1.0"
authors = ["Baeo Maltinsky <baeo.maltinsky@gmail.com>"]
edition = "2018"

[dependencies.herald_common]
path             = "../../herald_common"
default_features = false

[dependencies.rusqlite]
version          = "0.21"
default_features = false

[dependencies.search_pattern]
path = "../../search_pattern"

[dependencies.herald_ids]
path = "../herald_ids"
